# selvedge

./: .gitignore  .mcpbignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  glama.json  manifest.json  pyproject.toml  server.json  test.db  test.db-journal
.github/workflows/: pages.yml  publish.yml  release.yml  test.yml
.selvedge/: selvedge.db-journal
docs/: agent-trace-interop.md  architecture.md  comparison.html  fallbacks.md  faq.html  getting-started.md  index.html  marketing-templates.md  robots.txt  sitemap.xml
launch/: awesome-mcp-submission.md  devto-article.md  devto-followup-everyday.md  product-hunt.md  reddit-posts.md  show-hn.md
scripts/: coverage_check.py  demo-seed.py  demo.tape  record-demo.sh  update-repo-metadata.sh
selvedge/: __init__.py  cli.py  config.py  importers.py  logging_config.py  migrations.py  models.py  prompt.py  server.py  setup.py  storage.py  timeutil.py  validation.py  watch.py
tests/: test_adversarial.py  test_cli.py  test_concurrency.py  test_doctor.py  test_importers.py  test_logging_config.py  test_mcp_protocol.py  test_migrations.py  test_prompt.py  test_public_api.py  test_server.py  test_setup.py  test_storage.py  test_validation.py  test_watch.py
