[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selvedge"
version = "0.1.0"
description = "Change tracking for AI-era codebases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "ai", "changelog", "codebase", "tracking", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hatchling",
]

[project.scripts]
selvedge = "selvedge.cli:cli"
selvedge-server = "selvedge.server:main"

[project.urls]
Homepage = "https://github.com/masondelan/selvedge"
Repository = "https://github.com/masondelan/selvedge"
Issues = "https://github.com/masondelan/selvedge/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
