[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selvedge"
version = "0.2.0"
description = "Change tracking for AI-era codebases"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mason Delan", email = "masondelan@gmail.com" },
]
keywords = ["mcp", "ai", "changelog", "codebase", "tracking", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hatchling",
]

[project.scripts]
selvedge = "selvedge.cli:cli"
selvedge-server = "selvedge.server:main"

[project.urls]
Homepage = "https://github.com/masondelan/selvedge"
Repository = "https://github.com/masondelan/selvedge"
Issues = "https://github.com/masondelan/selvedge/issues"

[tool.hatch.build.targets.wheel]
packages = ["selvedge"]

[tool.hatch.build.targets.sdist]
include = [
    "selvedge/",
    "tests/",
    "docs/",
    "README.md",
    "CLAUDE.md",
    "pyproject.toml",
]
exclude = [
    ".selvedge/",
    "*.db",
    "*.db-journal",
    "*.db-shm",
    "*.db-wal",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
